# chemistry-apps

./: .env  .flake8  .gitignore  .gitmessage  LICENSE  PHASE_1_COMPLETION_SUMMARY.md  README.md  cspell.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  salida.txt  sonar-project.properties  sonar_report.txt
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  celerybeat-schedule  conftest.py  coverage.xml  db.sqlite3-journal  dump.rdb  manage.py  pyproject.toml  requirements.txt  requirementss.txt  ruff.json
backend/apps/: __init__.py
backend/apps/accounts/: __init__.py  admin.py  apps.py  models.py
backend/apps/cadma_py/: __init__.py  apps.py  contract.py  definitions.py  literature_catalog.py  models.py  plugin.py  routers.py  schemas.py  services.py  tests.py  types.py
backend/apps/calculator/: __init__.py  apps.py  contract.py  definitions.py  plugin.py  routers.py  schemas.py  test_extended.py  tests.py  types.py
backend/apps/core/: __init__.py  adapters.py  app_registry.py  apps.py  artifacts.py  base_router.py  cache.py  consumers.py  declarative_api.py  declarative_api_usage_examples.py  definitions.py  exceptions.py  factory.py  models.py  permissions.py  plugins.py  ports.py  processing.py  realtime.py  reporting.py  routers.py  routers_old_backup.py  routing.py  runtime_tools.py  schemas.py  services.py  services_old_backup.py  smiles_batch.py  tasks.py  test_cache_operations.py  test_core_components.py  test_declarative_api.py  test_job_api.py  test_job_control_extended.py  test_job_service.py  test_runtime_tools.py  test_services_characterization.py  test_tasks_extended.py  test_utils.py  tests.py  (+1 more)
backend/apps/easy_rate/: __init__.py  _gaussian_inspector.py  _tst_physics.py  apps.py  contract.py  definitions.py  plugin.py  routers.py  schemas.py  test_extended.py  test_gaussian_unit.py  test_physics_unit.py  tests.py  types.py
backend/apps/marcus/: __init__.py  apps.py  contract.py  definitions.py  plugin.py  routers.py  schemas.py  test_extended.py  tests.py  types.py
backend/apps/molar_fractions/: __init__.py  _species_labels.py  apps.py  contract.py  definitions.py  plugin.py  routers.py  schemas.py  test_extended.py  tests.py  types.py
backend/apps/random_numbers/: __init__.py  apps.py  contract.py  definitions.py  plugin.py  routers.py  schemas.py  test_extended.py  tests.py  types.py
backend/apps/sa_score/: __init__.py  apps.py  contract.py  definitions.py  plugin.py  routers.py  schemas.py  test_extended.py  test_plugin_unit.py  tests.py  types.py
backend/apps/smileit/: __init__.py  _catalog_schemas.py  _naming.py  _smileit_builders.py  _smileit_engine.py  apps.py  catalog.py  contract.py  definitions.py  engine.py  engine_old_backup.py  models.py  plugin.py  routers.py  routers_old_backup.py  (+15 more)
backend/asyncapi/: jobs-stream.yaml
backend/config/: __init__.py  asgi.py  cache_policy_general.py  cache_policy_smileit.py  celery.py  settings.py  startup_production.py  urls.py  wsgi.py
backend/libs/: __init__.py  chemistry_constants.py  runtime_support.py
backend/openapi/: README.md  schema.yaml
(+659 files in other folders)
